[package]
name = "gradecalculators"
version = "0.1.1"
authors = ["Louis Bayard <bayardlouis470@outlook.com>"]
edition = "2018"
description = "grade calculators"
license = "MIT"
homepage = "https://10converters.com"
repository = "https://github.com/bayardlouis470/rust-grade-calculator"
keywords = ["student", "grade"]

[dependencies]
